--- a/static/css/CVgrid.css
+++ b/static/css/CVgrid.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Helvetica, Arial
-    background-color: #d8da3d
+    font-family: Helvetica, Arial;
+    background-color: #d8da3d;
 }
 
 .container{
