--- a/templates/CVgrid.html
+++ b/templates/CVgrid.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>CV</title>
-    <link rel="stylesheet" href="CVgrid.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/CVgrid.css') }}">
 </head>
 <body>
-    <script src="CV.js"></script>
+    {% include "header.html" %}
+    <script src="{{ url_for('static', filename='../static/js/CV.js') }}"></script>
     <button onclick="myName()">What is my name?</button>
     <div class="container">
         <div class="item1">Erlich Alon- Industrial Engineering and Management, BGU, looking for a professional student position
